# ide-app-django

./: Dockerfile  README.md  ToDo.txt  pyproject.toml  requirements.txt
source/: db.sqlite3
source/UserProjects/private/: README.md  game.py
source/UserProjects/test/: README.md
source/UserProjects/this is public/: README.md
source/chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
source/chat/migrations/: 0001_initial.py  0002_initial.py
source/chat/static/: chat.css  chat.js
source/chat/templates/: chat.html
source/core/: .env  asgi.py  settings.py  urls.py
source/home/: admin.py  apps.py  models.py  urls.py  views.py
source/home/migrations/: 0001_initial.py  0002_homepage_send_from_email.py  0003_remove_homepage_send_from_email.py  0004_errorimage.py  0005_remove_homepage_page_heading_and_more.py
source/home/static/: base.css  base.js  home.css
source/home/templates/: 400.html  403.html  404.html  base.html  home.html
source/ide/: admin.py  consumers.py  models.py  urls.py  utils.py  views.py
source/ide/migrations/: 0001_initial.py  0002_project_collaborators.py  0002_remove_file_project_project_project_path_and_more.py  (+4 more)
source/landing_page/: admin.py  models.py  urls.py  views.py
source/profile/: urls.py  views.py
source/project/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  utils.py  views.py
source/static/: base.css  chat.css  chat.js  home.css  ide.css  profile.css  project.css
source/user/: admin.py  apps.py  models.py  urls.py  views.py
source/user_profile/: urls.py  views.py
(+61 files in other folders)
